--- a/Public_html/IS117FALL2015/htmlform/index.html
+++ b/Public_html/IS117FALL2015/htmlform/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 	<html>
-		<title>My HTML form </title>
 		<head>
+		<title>My HTML form </title>
+		</head>
 		<body>
-		<form method='post' action='' name='contactform' id='sampleform>
+		<h1>MY SAMPLE FORM</h1>
+		<form method='post' action='' name='contactform' id='sampleform >
 		<p>
-		Name: <input type = 'text' name='NAME' value='insert name here' />
+		Name: <input type='text' name='NAME' value='insert name here' />
 		</p>
 		<p>
-		UCID: < input type='text' name='UCID' value='enter UCID here' />
+		UCID: <input type='text' name='UCID' value='enter UCID here' />
 		</p>
 		<p>
-		<input type='submit' name='submit' value='submit' />
+		<input type='submit' name='Submit' value='Submit' />
 		</P>
 		</form>
+
 		</body>
-		</head>
+		
 	</html>
