--- a/Public_html/IS117FALL2015/htmlform/index.html
+++ b/Public_html/IS117FALL2015/htmlform/index.html
@@ -5,16 +5,23 @@
 		</head>
 		<body>
 		<h1>MY SAMPLE FORM</h1>
-		<form method='post' action='' name='contactform' id='sampleform >
+		<form method='post' action='' id='sampleform' >
+		
 		<p>
-		Name: <input type='text' name='NAME' value='insert name here' />
+		Name: <input type='text' name='Name' value='Enter name'  />
 		</p>
+		
 		<p>
-		UCID: <input type='text' name='UCID' value='enter UCID here' />
+		E-Mail: <input type='email' name='mail' value='Enter NJIT E-Mail' />
 		</p>
+
 		<p>
 		<input type='submit' name='Submit' value='Submit' />
 		</P>
+		
+		<p>
+		Phone: <input type='tel name='Phone' value='Enter phone number' /> 
+
 		</form>
 
 		</body>
