test github remote

--- a/Public_html/IS117FALL2015/htmlform/index.html
+++ b/Public_html/IS117FALL2015/htmlform/index.html
@@ -22,8 +22,10 @@
 		<p>
 		<input type='submit' name='Submit' value='Submit' />
 		</p>
-		</form>
 
+		
+		</form>
+		<p>test git hub remotes </p>
 		</body>
 		
 	</html>
